--- a/src/main/resources/application-sqlite.properties
+++ b/src/main/resources/application-sqlite.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:sqlite:banco.db
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
