--- a/src/main/resources/application-sqlite.properties
+++ b/src/main/resources/application-sqlite.properties
@@ -4,4 +4,5 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.community.dialect.SQLiteDialect
 
